hphp/test/zend/good/ext/sockets/tests/socket_set_block-wrongparams.php.skipif
<?php
if (!extension_loaded('sockets')) {
    die('SKIP The sockets extension is not loaded.');
}
?>