hphp/test/zend/bad/ext/posix/tests/posix_getgrgid_wrongparams.php.skipif
<?php
if (!extension_loaded('posix')) {
    die('SKIP The posix extension is not loaded.');
}
if (strtolower(PHP_OS) == 'darwin') {
    die('SKIP This test doesn\'t run on MacOSX/Darwin.');
}